Set Up Production Webpack Build

--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,9 @@
     <link rel="icon" type="image/png" href="./images/favicon.png">
 
     <title>Expensify</title>
+    <!-- link to our styles file -->
+    <!-- can be either ./ or just / -->
+    <link rel="stylesheet" type="text/css" href="/styles.css">
 </head>
 <body>
     <div id="app"></div>
